@@ -1,8 +1,0 @@
-#!/bin/bash
-
-ArchGenXML.py Poi.zuml ../ \
-              --e-mail 'optilude@gmx.net' \
-              --copyright 'Copyright (c) 2004 Martin Aspeli' \
-              --author 'Martin Aspeli'
-              
-              
