@@ -7,6 +7,8 @@ Changelog for Poi
 Poi 1.2 - (Unreleased)
 ----------------------
 
+- Remove UML model as we do not use that anymore.
+  [maurits]
 
 Poi 1.1 - Released December 27, 2007
 ------------------------------------
